test/compile_errors/err_compiler_hook_function_only.w
//! expect-error: compiler_hook attribute can only be used on functions

@[compiler_hook(after_typecheck)]
type NotAFunction {
    value: i32,
}

